--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "svgr": "^1.10.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
